# hapi-k8s-deploy

./: .gitignore  MANIFEST.in  README.md  k8sdeploy  k8sdeploy.py  pyproject.toml  setup.py
default_vars/: default_vars.yml
k8s_vars/: README.md  default_vars.yml  dev_k8s_vars.yml  dev_k8s_vars2.yml  example_vars.yml  testjob_k8s_vars.yml
src/k8sdeploy/: __init__.py  k8sdeploy.py  main.py
src/k8sdeploy/default_vars/: default_vars.yml
src/k8sdeploy/templates/: configmap.j2  deployment.j2  ingress.j2  job.j2  namespace.j2  secret.j2  service.j2
templates/: deployment.j2  ingress.j2
