[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "k8sdeploy"
version = "1.0.0"

authors = [
    {name = "Harvard API Team", email = "apihelp@harvard.edu"},
]
description = "Kuberenetes deployment"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "boto3",
    "pyyaml",
    "jinja2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
k8sdeploy = "k8sdeploy.main:main"